--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
+    env(MONGODB_URL): ''
+    env(MONGODB_DB): ''
 
 services:
     # default configuration for services in *this* file
@@ -15,6 +17,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/'
+        tags: ['controller.service_arguments']
         exclude:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
@@ -22,3 +25,11 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    doctrine_mongodb.odm.default_annotation_metadata_driver:
+        class: Doctrine\ODM\MongoDB\Mapping\Driver\AnnotationDriver
+        factory: ['Doctrine\ODM\MongoDB\Mapping\Driver\AnnotationDriver', 'create']
+        arguments:
+            - [ '%kernel.project_dir%/src/Document' ]  # Directory where your MongoDB documents are located
+        tags:
+            - { name: 'doctrine_mongodb.odm.metadata_driver', driver: 'annotation', namespace: 'App\Document' }
